Issue #SB-0000 fix: Css changes for Training/course module Design Gap

--- a/src/app/components/collection-child/collection-child.component.scss
+++ b/src/app/components/collection-child/collection-child.component.scss
@@ -87,3 +87,7 @@
         @include clearfix;
     }
 }
+
+.done-pt-8 {
+    padding-top: 8px !important;
+}
